# Path-Advisor

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  lefthook.yml
_bmad/: config.toml  (+1 more)
apps/ai-service/: .dockerignore  .env.example  Dockerfile.dev  pyproject.toml
apps/ai-service/src/: config.py  main.py
apps/ai-service/src/api/: dependencies.py  schemas.py
apps/ai-service/src/api/routes/: health.py  model_info.py  scoring.py
apps/ai-service/src/domain/recommendation/: statistical_scorer.py
apps/ai-service/src/tests/: conftest.py  test_health.py  test_model_info.py  test_scoring.py  test_statistical_scorer.py
apps/api/: .dockerignore  Dockerfile.dev  conftest.py  manage.py  pyproject.toml
apps/api/apps/accounts/: adapters.py  admin.py  apps.py  gdpr_exceptions.py  gdpr_urls.py  login_serializer.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/api/apps/accounts/exporters/: __init__.py  accounts.py  audit.py
apps/api/apps/accounts/migrations/: 0001_initial.py  0002_default_site.py  0003_gdpr_export_request.py  0003_parentalconsent.py  0004_gdpr_export_unique_active.py  0004_parental_consent_review_columns.py  0005_gdpr_export_request.py  0006_gdpr_export_unique_active.py  0007_enable_rls.py  0008_account_deletion_request.py  0009_account_deletion_dpo_permission.py  0010_user_locked_until.py  0011_mfa_profile.py  0012_user_role_support.py  0013_parental_consent_revoked_at.py  0014_parental_consent_revocation_notification_sent_at.py
apps/api/apps/accounts/services/: account_deletion.py  account_deletion_email.py  auth_service.py  gdpr_service.py  login_security.py  mfa.py  mfa_session.py  parental_consent.py  parental_consent_email.py  session_utils.py
apps/api/apps/accounts/tests/: conftest.py  factories.py  test_account_deletion_admin.py  test_account_deletion_service.py  test_account_deletion_tasks.py  test_account_deletion_views.py  test_gdpr_exporters.py  test_gdpr_models.py  test_gdpr_service.py  test_gdpr_tasks.py  test_gdpr_views.py  test_login.py  test_login_lockout.py  test_login_serializer_delete.py  test_mfa_challenge.py  test_mfa_disable_and_dpo.py  test_mfa_enrollment.py  test_mfa_login_flow.py  test_parental_consent.py  test_parental_consent_tasks.py  test_password_reset.py  test_revoke_notification_task.py  test_rls_isolation.py  test_signup.py  test_signup_under_15.py
apps/api/apps/audit/: admin.py  decorators.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/api/apps/audit/migrations/: 0001_initial.py  0002_audit_trigger.py  0003_widen_subject_id.py
apps/api/apps/audit/services/: archive_service.py  hash_chain.py
apps/api/apps/audit/tests/: conftest.py  factories.py  test_chain_after_user_deletion.py  test_decorator.py  test_integration_accounts.py  test_models.py  test_tasks.py  test_views.py
apps/api/apps/bulletins/: apps.py  fuzzy_subject_mapper.py  models.py  serializers.py  serializers_manual.py  tasks_ocr.py  tasks_purge.py  urls.py  views.py  views_manual.py
apps/api/apps/bulletins/migrations/: 0001_initial.py  0002_bulletin_manual.py
apps/api/apps/bulletins/providers/: base.py  tesseract.py
apps/api/apps/core/: exceptions.py  ids.py  models.py  openapi.py  permissions.py  request_context.py  rls.py  text.py  views.py
apps/api/apps/professions/: apps.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/profiles/: apps.py  serializers.py  urls.py
apps/api/apps/recommendations/: models.py  serializers.py  urls.py  views.py
apps/api/apps/schools/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/apps/students/: models.py  profile_maturity.py  serializers.py  tasks.py  tasks_recompute.py  urls.py  views.py  views_bulletins_status.py  views_maturity.py  views_profile.py
apps/api/path_advisor/: asgi.py  celery.py  urls.py  wsgi.py
apps/api/path_advisor/middleware/: actor_context.py  tenant.py
apps/api/path_advisor/settings/: base.py  local.py  prod.py  staging.py  test.py  test_postgres.py
apps/api/scripts/: assert_rbac_declared.py  assert_user_cascade.py  export_openapi.py  seed_dev.py
(+489 files in other folders)
